--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ dj-database-url==0.4.0
 Django==1.9.2
 djangorestframework==3.3.2
 gunicorn==19.4.5
+plotly==1.9.6
+pytz==2015.7
+requests==2.9.1
+six==1.10.0
 wheel==0.29.0
 whitenoise==2.0.6
-psycopg2==2.6.1
+psycopg2==2.6.1p
